<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hey!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_login">login with</string>
    <string name="facebook_app_id">596219200500489</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="interested_in">interested in</string>
    <string name="women">women</string>
    <string name="men">men</string>
    <string name="age">age   </string>
    <string name="years">   years</string>
    <string name="done">done</string>

    <!-- PREFERENCES -->
    <string name="pref_username" translatable="false">username</string>
    <string name="pref_userid" translatable="false">userid</string>
    <string name="pref_accesstoken" translatable="false">token</string>
    <string name="pref_gcmid" translatable="false">gcmid</string>
    <string name="pref_city" translatable="false">city</string>
    <string name="pref_ismale" translatable="false">is_male</string>
    <string name="pref_maxage" translatable="false">max_age</string>
    <string name="pref_minage" translatable="false">min_age</string>
    <string name="pref_macaddress" translatable="false">mac_address</string>
    <string name="pref_birthdate" translatable="false">birthdate</string>
    <string name="pref_likesmale" translatable="false">likes_male</string>
    <string name="pref_likesfemale" translatable="false">likes_female</string>
    <string name="title_activity_meet">MeetActivity</string>

    <string name="google_cloud_msg" templateMergeStrategy="preserve">AIzaSyB7BtIaBjNxUL3l4cEcSk8_xLqgfPmuEwk</string>

</resources>
