<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zerolabs.hey.ProfileActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/ron_swanson"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="Ron"
                android:id="@+id/profile_username_textview"
                android:textSize="@dimen/profile_text_size"
                android:gravity="center_vertical"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="Zürich, CH"
                android:id="@+id/profile_location_textview"
                android:textSize="@dimen/profile_text_size"
                android:gravity="center_vertical"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="fucking manly"
                android:id="@+id/profile_gender_textview"
                android:textSize="@dimen/profile_text_size"
                android:gravity="center_vertical"
                android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:padding="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_text_size"
                android:id="@+id/interested_in_text"
                android:text="@string/interested_in"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/women_checkbox"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/profile_text_size"
                    android:text="@string/women"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/men_checkbox"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_text_size"
                android:text="@string/men"/>
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_text_size"
                android:text="@string/age"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="10 - 15"
                android:textSize="@dimen/profile_text_size"
                android:background="@drawable/round_style_edittextnf"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_text_size"
                android:text="@string/years"/>

        </LinearLayout>
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            android:max="80"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_text_size"
                android:text="@string/done"/>
            </LinearLayout>

</LinearLayout>
</LinearLayout>